# virtual_travel

./: README.md  package.xml  setup.cfg  setup.py
.github/workflows/: test.yml
config/: location.csv
launch/: talk_listen.launch.py  tokaido.launch.py
mypkg/: listener.py  talker.py
mypkg_msgs/: CMakeLists.txt  package.xml
test/: test.bash
virtual_travel/: gnss_simulator.py  tour_guide.py
